added-spanish-content

--- a/Gallery/index_de.html
+++ b/Gallery/index_de.html
@@ -377,11 +377,11 @@
     </section>
 
     <section class="footer">
-      <p>
-        Vinos Adentro 2685 above sea level <br />
-        Cachi/Argentina
-      </p>
-      <i class="fa fa-instagram" aria-hidden="true"></i>
+        <p>
+          Vinos Adentro 2685 Meter über dem Meeresspiegel <br />
+          Cachi/Argentinien
+        </p>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
     </section>
 
     <script src="../Header Menu and Modal/header.js"></script>
