--- a/Home/index_es.html
+++ b/Home/index_es.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home ES</title>
+    <title>Inicio ES</title>
     
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
@@ -28,13 +28,13 @@
       <div class="logo">
         <img
           src="./original-logo adentro.png"
-          alt="Vinos Adentro Logo"
+          alt="Logo Vinos Adentro"
           height="80px"
           width="115px"
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÚ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -44,18 +44,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index_es.html">Home</a></li>
-            <li><a href="../About/index_es.html">About us</a></li>
+            <li><a href="../Home/index_es.html">Inicio</a></li>
+            <li><a href="../About/index_es.html">Sobre nosotros</a></li>
             <li>
-              <a href="../wines/index_es.html">Wines</a>
+              <a href="../wines/index_es.html">Vinos</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../Gallery/index_es.html">Gallery</a></li>
-            <li><a href="../Contact Us/index_es.html">Contact</a></li>
+            <li><a href="../weinbestellung/weinbestellung.html">Pedir Vino</a></li>
+            <li><a href="../Gallery/index_es.html">Galería</a></li>
+            <li><a href="../Contact Us/index_es.html">Contacto</a></li>
           </ul>
         </nav>
       </div>
@@ -68,7 +68,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Atrás
           </a>
           <ul>
             <li><a href="../wines/Details/Malbec/index_es.html">Malbec</a></li>
@@ -86,12 +86,12 @@
 
     <section class="carousel">
       <div class="slide">
-        <img src="./wine image.jpg" alt="Wines Image 1" />
+        <img src="./wine image.jpg" alt="Imagen de Vinos 1" />
         <div class="overlay">
           <div class="overlay-text">
             <p>
-              Special wines
-              <span style="color: #bc728a"> from a special place</span>
+              Vinos especiales
+              <span style="color: #bc728a"> de un lugar especial</span>
             </p>
             <div class="overlay-icons">
               <i
@@ -109,12 +109,12 @@
         </div>
       </div>
       <div class="slide">
-        <img src="./grapes.jpg" alt="Wines Image 2" />
+        <img src="./grapes.jpg" alt="Imagen de Vinos 2" />
         <div class="overlay">
           <div class="overlay-text">
             <p>
-              Passionate about
-              <span style="color: #bc728a"> malbec in the andes</span>
+              Apasionados por
+              <span style="color: #bc728a"> el malbec en los Andes</span>
             </p>
             <div class="overlay-icons">
               <i
@@ -132,12 +132,12 @@
         </div>
       </div>
       <div class="slide">
-        <img src="./mountains-image.jpg" alt="Wines Image 3" />
+        <img src="./mountains-image.jpg" alt="Imagen de Vinos 3" />
         <div class="overlay">
           <div class="overlay-text">
             <p>
-              Wines closer to heaver
-              <span style="color: #bc728a"> than to earth</span>
+              Vinos más cerca del cielo
+              <span style="color: #bc728a"> que de la tierra</span>
             </p>
             <div class="overlay-icons">
               <i
@@ -158,49 +158,34 @@
 
     <section class="body">
       <div class="left">
-        <img src="./adentro_malbec-crop-u28702.png" alt="Adentro Bottle Logo" />
+        <img src="./adentro_malbec-crop-u28702.png" alt="Logotipo de Botella Adentro" />
       </div>
       <div class="right">
-        <h1>Adentro Wines</h1>
+        <h1>Vinos Adentro</h1>
         <p>
-          In the northern part of the Argentinian Andes, near Cachi, lies the
-          vineyard Finca Rio Las Arcas at 2685 meters above sea level, and
-          counts as one of the highest in the world.
+          En la parte norte de los Andes argentinos, cerca de Cachi, se encuentra la bodega Finca Rio Las Arcas a 2685 metros sobre el nivel del mar, y se cuenta como una de las más altas del mundo.
         </p>
 
         <p>
-          Back in 2005, in this peaceful, valley in which time seemed to have
-          stood still, we began to plant our vines. Our varietals Malbec, Merlot
-          and Torrontés, cover eight hectares, thriving amongst the old Arca
-          trees. These trees have become the hallmark of the vineyard and its
-          leaf decorates our label.
+          En 2005, en este valle tranquilo donde el tiempo parecía haberse detenido, comenzamos a plantar nuestras vides. Nuestras variedades Malbec, Merlot y Torrontés, abarcan ocho hectáreas, prosperando entre los viejos árboles de Arca. Estos árboles se han convertido en el sello distintivo del viñedo y sus hojas decoran nuestra etiqueta.
         </p>
         <p>
-          Far away from towns and cities, at the foot of the mighty Nevado de
-          Cachi (6400m), we have ideal conditions for cultivating vines. The
-          arid climate with little precipitation, high thermal amplitudes, an
-          abundance of sunshine, along with the unique climate of the region,
-          enables the growth of very high quality grapes. Thanks to the
-          beneficial conditions, very few treatments are required.
+          Lejos de pueblos y ciudades, al pie del imponente Nevado de Cachi (6400m), tenemos condiciones ideales para cultivar viñedos. El clima árido con poca precipitación, amplitudes térmicas elevadas, abundancia de sol, junto con el clima único de la región, permite el crecimiento de uvas de muy alta calidad. Gracias a las condiciones beneficiosas, se requieren muy pocos tratamientos.
         </p>
         <p>
-          Since 2011, we produce our wines - the ADENTRO Malbec and ADENTRO
-          Merlot. In 2015 we added the white wine ADENTRO Torrontés to our
-          selection. Our elegant wines are vinified in a very modern Bodegas
-          nearby. Thanks to the climate, we are able to produce fruity, complex,
-          wines with rounded tannins.
+          Desde 2011, producimos nuestros vinos: ADENTRO Malbec y ADENTRO Merlot. En 2015 agregamos el vino blanco ADENTRO Torrontés a nuestra selección. Nuestros elegantes vinos se vinifican en una bodega muy moderna cercana. Gracias al clima, podemos producir vinos afrutados, complejos, con taninos redondeados.
         </p>
         <p>
-          Our wines are available at the moment in Argentina and Switzerland.
+          Nuestros vinos están disponibles actualmente en Argentina y Suiza.
           <br />
-          Varietals: Malbec, Merlot and Torrontés
+          Variedades: Malbec, Merlot y Torrontés
         </p>
       </div>
     </section>
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
+        Vinos Adentro 2685 metros sobre el nivel del mar <br />
         Cachi/Argentina
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -226,8 +211,8 @@
 
       document.addEventListener("DOMContentLoaded", function () {
         setInterval(() => {
-          changeSlide(1); // Change slide every X milliseconds
-        }, 5000); // Change the interval time as needed (e.g., every 5 seconds)
+          changeSlide(1); // Cambiar la diapositiva cada X milisegundos
+        }, 5000); // Cambiar el tiempo del intervalo según sea necesario (por ejemplo, cada 5 segundos)
 
         showSlide(currentSlide);
       });
