--- a/wines/Details/GranNevado/index_es.html
+++ b/wines/Details/GranNevado/index_es.html
@@ -27,13 +27,13 @@
       <div class="logo">
         <img
           src="../../original-logo adentro.png"
-          alt="Vinos Adentro Logo"
+          alt="Logo Vinos Adentro"
           height="80px"
           width="115px"
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÚ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../../../Home/index_es.html">Home</a></li>
-            <li><a href="../../../About/index_es.html">About us</a></li>
+            <li><a href="../../../Home/index_es.html">Inicio</a></li>
+            <li><a href="../../../About/index_es.html">Sobre nosotros</a></li>
             <li>
-              <a href="../../../wines/index_es.html">Wines</a>
+              <a href="../../../wines/index_es.html">Vinos</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../../../Gallery/index_es.html">Gallery</a></li>
-            <li><a href="../../../Contact Us/index_es.html">Contact</a></li>
+            <li><a href="../../../weinbestellung/weinbestellung.html">Pedir Vino</a></li>
+            <li><a href="../../../Gallery/index_es.html">Galería</a></li>
+            <li><a href="../../../Contact Us/index_es.html">Contacto</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Atrás
           </a>
           <ul>
             <li><a href="../Malbec/index_es.html">Malbec</a></li>
@@ -80,7 +80,7 @@
     </div>
 
     <section class="caroussel">
-      <img src="./Malbec grapes.jpeg" alt="Wines Image" />
+      <img src="./Malbec grapes.jpeg" alt="Imagen de Vinos" />
     </section>
 
     <section class="body">
@@ -89,34 +89,26 @@
         <div class="left">
           <img
             src="./Gran Nevado.png"
-            alt="Gran Nevado Bottle png"
+            alt="Botella de Gran Nevado png"
             height="600px"
           />
         </div>
         <div class="right">
           <p>
-            The Gran Nevado is made with our best grapes. The grapes were
-            harvested by hand on April 5th and 11th 2016. 10% Merlot and 90%
-            Malbec grapes. After a careful selection they were fermented in
-            inox-tanks. Crizana partly in neutral and partly in new barrels.
-            Spontaneous fermentation was used, without additional yeast. Intense
-            dark color, almost black. Very fruity and fresh, but with a good
-            structure, thanks to the smooth tannins. An expression of the
-            high-altitude terroir of Cachi Adentro. A Long and persistent
-            finish.
+            El Gran Nevado está hecho con nuestras mejores uvas. Las uvas fueron cosechadas a mano el 5 y 11 de abril de 2016. 10% de uvas Merlot y 90% de uvas Malbec. Después de una cuidadosa selección, se fermentaron en tanques de acero inoxidable. Crizana parcialmente en barricas neutras y parcialmente en barricas nuevas. Se utilizó fermentación espontánea, sin levadura adicional. Color oscuro intenso, casi negro. Muy afrutado y fresco, pero con una buena estructura gracias a los taninos suaves. Una expresión del terruño de gran altitud de Cachi Adentro. Un final largo y persistente.
           </p>
           <br />
-          <h3>Country of origin:</h3>
+          <h3>País de origen:</h3>
           <p>Cachi Adentro, Salta Argentina</p>
 
           <h3>Alcohol:</h3>
           <p>14.7%</p>
 
-          <h3>Aging:</h3>
-          <p>14 monts in oak</p>
+          <h3>Envejecimiento:</h3>
+          <p>14 meses en roble</p>
 
-          <h3>Complements</h3>
-          <p>Roast, red meats, barbeque and stews</p>
+          <h3>Complementos:</h3>
+          <p>Asados, carnes rojas, barbacoa y guisos</p>
           <div class="buttons">
             <a href="../Merlot/index_es.html"><div class="btn1">Merlot</div></a>
             <a href="../Torrentes/index_es.html"
@@ -130,7 +122,7 @@
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
+        Vinos Adentro 2685 metros sobre el nivel del mar <br />
         Cachi/Argentina
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
