--- a/wines/Details/Torrentes/index_es.html
+++ b/wines/Details/Torrentes/index_es.html
@@ -27,13 +27,13 @@
       <div class="logo">
         <img
           src="../../original-logo adentro.png"
-          alt="Vinos Adentro Logo"
+          alt="Logo Vinos Adentro"
           height="80px"
           width="115px"
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÚ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../../../Home/index_es.html">Home</a></li>
-            <li><a href="../../../About/index_es.html">About us</a></li>
+            <li><a href="../../../Home/index_es.html">Inicio</a></li>
+            <li><a href="../../../About/index_es.html">Sobre nosotros</a></li>
             <li>
-              <a href="../../../wines/index_es.html">Wines</a>
+              <a href="../../../wines/index_es.html">Vinos</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../../../Gallery/index_es.html">Gallery</a></li>
-            <li><a href="../../../Contact Us/index_es.html">Contact</a></li>
+            <li><a href="../../../weinbestellung/weinbestellung.html">Pedir Vino</a></li>
+            <li><a href="../../../Gallery/index_es.html">Galería</a></li>
+            <li><a href="../../../Contact Us/index_es.html">Contacto</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Atrás
           </a>
           <ul>
             <li><a href="../Malbec/index_es.html">Malbec</a></li>
@@ -80,7 +80,7 @@
     </div>
 
     <section class="caroussel">
-      <img src="./Torrentes Grapes.jpeg" alt="Wines Image" />
+      <img src="./Torrentes Grapes.jpeg" alt="Imagen de Vinos" />
     </section>
 
     <section class="body">
@@ -88,29 +88,26 @@
         <div class="left">
           <img
             src="./Torrentes image.png"
-            alt="Torrentes Bottle png"
+            alt="Botella de Torrentes png"
           />
         </div>
         <div class="right">
           <h1>Torrentes</h1>
           <p>
-            Luminous yellow. Scents of tropical fruit, with a floral freshness.
-            On the palate intense fruit. Thanks to the high altitude, it
-            showcases a delicately balanced acidity. A lovely, elegant, finish
-            with a hint of minerality.
+            Amarillo luminoso. Aromas de frutas tropicales, con frescura floral. En el paladar, fruta intensa. Gracias a la alta altitud, exhibe una acidez delicadamente equilibrada. Un final encantador y elegante con un toque de mineralidad.
           </p>
           <div class="details">
-            <h3>Country of origin:</h3>
+            <h3>País de origen:</h3>
             <p>Cachi Adentro, Salta, Argentina</p>
 
             <h3>Alcohol:</h3>
             <p>13.5%</p>
 
-            <h3>Aging:</h3>
-            <p>12 months in oak</p>
+            <h3>Envejecimiento:</h3>
+            <p>12 meses en roble</p>
 
-            <h3>Complements:</h3>
-            <p>Aperitif, seafood, fish, white meats, and empanadas</p>
+            <h3>Complementos:</h3>
+            <p>Aperitivo, mariscos, pescado, carnes blancas y empanadas</p>
           </div>
           <div class="buttons">
             <a href="../Merlot/index_es.html" class="btn1">Merlot</a>
@@ -123,7 +120,7 @@
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
+        Vinos Adentro 2685 metros sobre el nivel del mar <br />
         Cachi/Argentina
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
