--- a/wines/index_es.html
+++ b/wines/index_es.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wine ES</title>
+    <title>Vinos ES</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../css/lang_select.css" />
@@ -27,13 +27,13 @@
       <div class="logo">
         <img
           src="./original-logo adentro.png"
-          alt="Vinos Adentro Logo"
+          alt="Logo Vinos Adentro"
           height="80px"
           width="115px"
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÚ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index_es.html">Home</a></li>
-            <li><a href="../About/index_es.html">About us</a></li>
+            <li><a href="../Home/index_es.html">Inicio</a></li>
+            <li><a href="../About/index_es.html">Sobre nosotros</a></li>
             <li>
-              <a href="../wines/index_es.html">Wines</a>
+              <a href="../wines/index_es.html">Vinos</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../Gallery/index_es.html">Gallery</a></li>
-            <li><a href="../Contact Us/index_es.html">Contact</a></li>
+            <li><a href="../weinbestellung/weinbestellung.html">Pedir Vino</a></li>
+            <li><a href="../Gallery/index_es.html">Galería</a></li>
+            <li><a href="../Contact Us/index_es.html">Contacto</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Atrás
           </a>
           <ul>
             <li><a href="./Details/Malbec/index_es.html">Malbec</a></li>
@@ -80,52 +80,46 @@
     </div>
 
     <section class="caroussel">
-      <img src="./wines image.jpeg" alt="Wines Image" />
+      <img src="./wines image.jpeg" alt="Imagen de Vinos" />
     </section>
 
     <section class="body">
       <div class="body1">
-        <h1>Our Wines</h1>
+        <h1>Nuestros Vinos</h1>
         <div class="wine-cards">
           <div class="card">
-            <img src="./malbes.png" alt="MALBEC Image" />
+            <img src="./malbes.png" alt="Imagen de MALBEC" />
             <p>MALBEC</p>
           </div>
           <div class="card">
-            <img src="./merlot.png" alt="MALBEC Image" />
+            <img src="./merlot.png" alt="Imagen de MERLOT" />
             <p>MERLOT</p>
           </div>
           <div class="card">
-            <img src="./torrentes.png" alt="MALBEC Image" />
+            <img src="./torrentes.png" alt="Imagen de TORRENTES" />
             <p>TORRENTES</p>
           </div>
           <div class="card">
             <img
               src="./gran nevado.png"
-              alt="MALBEC Image"
+              alt="Imagen de GRAN NEVADO"
               style="height: 302px"
             />
             <p style="width: 150px">GRAN NEVADO</p>
           </div>
         </div>
         <p>
-          We have been producing the ADENTRO Malbec and Merlot since 2011. Four
-          years later, we have added to our selection, the white wine ADENTRO
-          Torrontés. These elegant wines with intense fruit flavors are vinified
-          close to our vineyard in one of Argentina’s most modern wineries. The
-          special climate allows the creation of intense, complex wines, rich in
-          fruit flavors, accompanied by soft tannins. Our vineyard is one of the
-          highest in the world, situated at almost 2700 meters above sea level.
+          Producimos los vinos ADENTRO Malbec y Merlot desde 2011. Cuatro años después, hemos añadido a nuestra selección el vino blanco ADENTRO Torrontés. Estos elegantes vinos con intensos sabores a frutas se vinifican cerca de nuestro viñedo en una de las bodegas más modernas de Argentina. El clima especial permite la creación de vinos intensos, complejos, ricos en sabores a frutas, acompañados de taninos suaves. Nuestro viñedo es uno de los más altos del mundo, ubicado a casi 2700 metros sobre el nivel del mar.
           <br />
 
-          As of summer 2017 our wines are also available in Switzerland.
+          Desde el verano de 2017, nuestros vinos también están disponibles en Suiza.
         </p>
       </div>
     </section>
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
+        Vinos Adentro 2685 metros sobre el nivel del mar <br />
         Cachi/Argentina
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
