--- a/About/index_es.html
+++ b/About/index_es.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About ES</title>
+    <title>Sobre nosotros ES</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../css/lang_select.css" />
@@ -33,7 +33,7 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÚ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index_es.html">Home</a></li>
-            <li><a href="../About/index_es.html">About us</a></li>
+            <li><a href="../Home/index_es.html">Inicio</a></li>
+            <li><a href="../About/index_es.html">Sobre nosotros</a></li>
             <li>
-              <a href="../wines/index_es.html">Wines</a>
+              <a href="../wines/index_es.html">Vinos</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../Gallery/index_es.html">Gallery</a></li>
-            <li><a href="../Contact Us/index_es.html">Contact</a></li>
+            <li><a href="../weinbestellung/weinbestellung.html">Ordenar vino</a></li>
+            <li><a href="../Gallery/index_es.html">Galería</a></li>
+            <li><a href="../Contact Us/index_es.html">Contacto</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Volver
           </a>
           <ul>
             <li><a href="../wines/Details/Malbec/index_es.html">Malbec</a></li>
@@ -84,7 +84,7 @@
     </div>
 
     <section class="carousel">
-      <img src="./farms.jpeg" alt="Farms Image" />
+      <img src="./farms.jpeg" alt="Imagen de fincas" />
     </section>
 
     <section class="body">
@@ -93,14 +93,14 @@
           <img src="./Image 1.jpeg" alt="" />
         </div>
         <div class="right">
-          <h1>About Us</h1>
+          <h1>Sobre nosotros</h1>
           <p>
-            Attracted by the majestic mountains of the Andes, Viera Merz and
-            ChristianxGötz made several journeys to the northwest of Argentina.
+            Atraídos por las majestuosas montañas de los Andes, Viera Merz y
+            ChristianxGötz realizaron varios viajes al noroeste de Argentina.
             <br /><br />
 
-            Fascinated by the mountains and the pristine landscape, in July 2005
-            we decided to purchase land in Cachi Adentro, at the foot of the
+            Fascinados por las montañas y el paisaje prístino, en julio de 2005
+            decidimos comprar tierras en Cachi Adentro, al pie del
             Nevado de Cachi. <br />
             <br />
 
@@ -110,25 +110,25 @@
       </div>
       <div class="container container1">
         <div class="right">
-          <h1>History</h1>
+          <h1>Historia</h1>
           <p>
-            After acquiring the land, we put all our energy and passion into
-            developing the infrastructure of the farm. In stages we planted
-            altogether 8.25 hectares of vines and a walnut orchard measuring 1.5
-            hectares. With the invaluable help of three employees we built up
-            the finca from scratch. So now, we are proud of our six hectares of
-            Malbec, one hectare of Merlot and one and a half hectares of
-            Torrontés vines. We have our grapes vinified into elegant wines by a
-            modern winery nearby.<br />
+            Después de adquirir la tierra, pusimos toda nuestra energía y pasión en
+            desarrollar la infraestructura de la finca. En etapas plantamos
+            en total 8.25 hectáreas de viñedos y un huerto de nogales de 1.5
+            hectáreas. Con la invaluable ayuda de tres empleados construimos
+            la finca desde cero. Ahora estamos orgullosos de nuestras seis hectáreas de
+            Malbec, una hectárea de Merlot y una hectárea y media de
+            viñedos de Torrontés. Hacemos vinificar nuestras uvas en elegantes vinos por una
+            bodega moderna cercana.<br />
             <br />
 
-            Our next project is to build our own “bodega”. We seize this
-            opportunity despite the challenges of building a winery in an
-            isolated region. <br />
+            Nuestro próximo proyecto es construir nuestra propia "bodega". Aprovechamos esta
+            oportunidad a pesar de los desafíos de construir una bodega en una
+            región aislada. <br />
             <br />
 
-            Since the summer of 2017 we are exporting the ADENTRO wines to
-            Switzerland, and we are delighted with the positive feedback.
+            Desde el verano de 2017 exportamos los vinos ADENTRO a
+            Suiza y estamos encantados con la respuesta positiva.
           </p>
         </div>
         <div class="left" style="padding: 20px">
@@ -138,12 +138,12 @@
     </section>
 
     <section class="carousel1">
-      <img src="./farms1.jpg" alt="Farms Image" />
+      <img src="./farms1.jpg" alt="Imagen de fincas" />
     </section>
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
+        Vinos Adentro 2685 metros sobre el nivel del mar <br />
         Cachi/Argentina
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
