--- a/wines/Details/Malbec/index_es.html
+++ b/wines/Details/Malbec/index_es.html
@@ -27,13 +27,13 @@
       <div class="logo">
         <img
           src="../../original-logo adentro.png"
-          alt="Vinos Adentro Logo"
+          alt="Logo Vinos Adentro"
           height="80px"
           width="115px"
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÚ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../../../Home/index_es.html">Home</a></li>
-            <li><a href="../../../About/index_es.html">About us</a></li>
+            <li><a href="../../../Home/index_es.html">Inicio</a></li>
+            <li><a href="../../../About/index_es.html">Sobre nosotros</a></li>
             <li>
-              <a href="../../../wines/index_es.html">Wines</a>
+              <a href="../../../wines/index_es.html">Vinos</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../../../Gallery/index_es.html">Gallery</a></li>
-            <li><a href="../../../Contact Us/index_es.html">Contact</a></li>
+            <li><a href="../../../weinbestellung/weinbestellung.html">Pedir Vino</a></li>
+            <li><a href="../../../Gallery/index_es.html">Galería</a></li>
+            <li><a href="../../../Contact Us/index_es.html">Contacto</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Atrás
           </a>
           <ul>
             <li><a href="./index_es.html">Malbec</a></li>
@@ -80,7 +80,7 @@
     </div>
 
     <section class="caroussel">
-      <img src="./Malbec grapes.jpeg" alt="Wines Image" />
+      <img src="./Malbec grapes.jpeg" alt="Imagen de Vinos" />
     </section>
 
     <section class="body">
@@ -88,31 +88,27 @@
         <div class="left">
           <img
             src="./malbec bottle.png"
-            alt="Malbec Bottle png"
+            alt="Botella de Malbec png"
             height="600px"
           />
         </div>
         <div class="right">
           <h1>Malbec</h1>
           <p>
-            Intense, dark ruby red color. Expressive bouquet of rich, ripe
-            violet fruit with a floral scent and hints of minerality. Discreet
-            touch of tobacco and leather. Fresh acidity balanced with soft,
-            round tannins. The unique terroir of Cachi is embodied in this wine.
-            Long and noble finish.
+            Color rojo rubí intenso y oscuro. Bouquet expresivo de frutas violetas ricas y maduras con un aroma floral y toques minerales. Toque discreto de tabaco y cuero. Acidez fresca equilibrada con taninos suaves y redondos. El terruño único de Cachi se encarna en este vino. Final largo y noble.
           </p>
           <br />
-          <h3>Country of origin:</h3>
+          <h3>País de origen:</h3>
           <p>Cachi Adentro, Salta, Argentina</p>
 
           <h3>Alcohol:</h3>
           <p>14.5%</p>
 
-          <h3>Aging:</h3>
-          <p>12 months in oak</p>
+          <h3>Envejecimiento:</h3>
+          <p>12 meses en roble</p>
 
-          <h3>Complements</h3>
-          <p>Roast, red meats, barbeque, and stews</p>
+          <h3>Complementos:</h3>
+          <p>Asados, carnes rojas, barbacoa y guisos</p>
           <div class="buttons">
             <a href="../Merlot/index_es.html" class="btn1">Merlot</a>
             <a href="../Torrentes/index_es.html" class="btn1 btn-margin"
@@ -128,7 +124,7 @@
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
+        Vinos Adentro 2685 metros sobre el nivel del mar <br />
         Cachi/Argentina
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
