wine-order-only-for-germans

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        // Redirect to ./Home/index.html
+        // Redirect to ./Home/index_de.html
         window.location.href = "./Home/index_de.html";
     </script>
 </head>
