--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -59,7 +59,7 @@
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
+            <!-- <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li> -->
             <li><a href="./index.html">Gallery</a></li>
             <li><a href="../Contact Us/index.html">Contact</a></li>
           </ul>
