--- a/Gallery/index_es.html
+++ b/Gallery/index_es.html
@@ -59,7 +59,7 @@
                   ><i class="fa fa-chevron-right" aria-hidden="true"></i>
                 </a>
               </li>
-              <li><a href="../weinbestellung/weinbestellung.html">Ordenar vino</a></li>
+              <!-- <li><a href="../weinbestellung/weinbestellung.html">Ordenar vino</a></li> -->
               <li><a href="./index_es.html">Galería</a></li>
               <li><a href="../Contact Us/index_es.html">Contacto</a></li>
             </ul>
