--- a/wines/Details/Torrentes/index.html
+++ b/wines/Details/Torrentes/index.html
@@ -52,7 +52,7 @@
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
+            <!-- <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li> -->
             <li><a href="../../../Gallery/index.html">Gallery</a></li>
             <li><a href="../../../Contact Us/index.html">Contact</a></li>
           </ul>
